--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js:
-  - 0.9
-  - 0.8
+  - 0.10
 before_script:
   - "cake build"
-  - "npm i -g jasmine-node"
-  - "npm i -g jasmine-jquery"
+  - "npm i -g phantomjs"
