--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "uglify-js": "~2.3.6",
     "codo": "~1.7.0",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "phantomjs": "~1.9.0"
   },
   "scripts": {
     "test": "phantomjs tests/SpecRunner.coffee tests/SpecRunner.html"
