--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples/todomvc"]
 	path = examples/todomvc
-	url = git@github.com:ShaunSpringer/todomvc.git
+	url = git://github.com:ShaunSpringer/todomvc.git
